# ewoms-eclio

./: CMakeLists.txt  README.md  config.h.cmake  dune.module  ewoms-eclio.pc.in
cmake/modules/: EwomsEclioMacros.cmake  FindEwomsEclUtils.cmake
ewoms/eclio/: errormacros.hh  exceptions.hh
ewoms/eclio/data/: simulationdatacontainer.cc  simulationdatacontainer.hh
ewoms/eclio/io/: eclfile.cc  eclfile.hh  ecliodata.hh  ecloutput.cc  ecloutput.hh  eclutil.cc  eclutil.hh  egrid.cc  egrid.hh  einit.cc  einit.hh  erft.cc  erft.hh  ersm.cc  ersm.hh  erst.cc  erst.hh  esmry.cc  esmry.hh  esmry_write_rsm.cc  outputstream.cc  outputstream.hh  paddedoutputstring.hh  summarynode.cc  summarynode.hh
ewoms/eclio/io/rst/: connection.cc  connection.hh  group.cc  group.hh  header.cc  header.hh  segment.cc  segment.hh  state.cc  state.hh  well.cc  well.hh
ewoms/eclio/json/: cjson.c  cjson.h  jsonobject.cc  jsonobject.hh
ewoms/eclio/opmlog/: counterlog.cc  counterlog.hh  eclipseprtlog.cc  eclipseprtlog.hh  infologger.cc  infologger.hh  keywordlocation.cc  keywordlocation.hh  location.hh  logbackend.cc  logbackend.hh  logger.cc  logger.hh  logutil.cc  logutil.hh  messageformatter.hh  messagelimiter.hh  opmlog.cc  opmlog.hh  streamlog.cc  streamlog.hh  timerlog.cc  timerlog.hh
ewoms/eclio/output/: aggregateactionxdata.cc  aggregateactionxdata.hh  aggregateconnectiondata.cc  aggregateconnectiondata.hh  aggregategroupdata.cc  aggregategroupdata.hh  aggregatemswdata.cc  aggregatemswdata.hh  aggregateudqdata.cc  aggregateudqdata.hh  aggregatewelldata.cc  aggregatewelldata.hh  createactionxdims.cc  createdoubhead.cc  createintehead.cc  createlogihead.cc  createudqdims.cc  doubhead.cc  doubhead.hh  eclipsegridinspector.cc  eclipsegridinspector.hh  eclipseio.cc  eclipseio.hh  eclipseioutil.hh  inplace.cc  inplace.hh  intehead.cc  intehead.hh  linearisedoutputtable.cc  linearisedoutputtable.hh  loadrestart.cc  logihead.cc  logihead.hh  outputwriter.hh  regioncache.cc  regioncache.hh  restartio.cc  restartio.hh  restartvalue.cc  restartvalue.hh  (+12 more)
ewoms/eclio/output/data/: aquifer.hh  cells.hh  groups.hh  guideratevalue.hh  solution.cc  solution.hh  wells.hh
ewoms/eclio/output/report/: welspecs.cc
ewoms/eclio/output/vectoritems/: aquifer.hh  connection.hh  doubhead.hh  group.hh  intehead.hh  logihead.hh  msw.hh  tabdims.hh  well.hh
ewoms/eclio/parser/: errorguard.cc  errorguard.hh  inputerroraction.hh  parsecontext.cc  parsecontext.hh  parser.cc  parser.hh  parserconst.hh  parserenums.cc  parserenums.hh  parseritem.cc  parseritem.hh  parserkeyword.cc  parserkeyword.hh  parserkeywords.cc  parserkeywords.hh  parserkeywordsinit.cc  parserrecord.cc  parserrecord.hh
ewoms/eclio/parser/deck/: deck.cc  deck.hh  deckitem.cc  deckitem.hh  deckkeyword.cc  deckkeyword.hh  deckoutput.cc  deckoutput.hh  deckrecord.cc  deckrecord.hh  decksection.cc  decksection.hh  deckvalue.cc  deckvalue.hh  section.cc  section.hh  udavalue.cc  udavalue.hh  value_status.hh
ewoms/eclio/parser/eclipsestate/: aquancon.cc  aquancon.hh  aquiferconfig.cc  aquiferconfig.hh  aquiferct.cc  aquiferct.hh  aquifetp.cc  aquifetp.hh  checkdeck.cc  checkdeck.hh  eclipse3dproperties.cc  eclipse3dproperties.hh  eclipseconfig.cc  eclipseconfig.hh  eclipsestate.cc  eclipsestate.hh  endpointscaling.cc  endpointscaling.hh  runspec.cc  runspec.hh  thpresft.hh  tracerconfig.cc  tracerconfig.hh
ewoms/eclio/parser/parserkeywords/: a.cc  a.hh  b.cc  b.hh  c.cc  c.hh  d.cc  d.hh  e.cc  e.hh  f.cc  f.hh  g.cc  g.hh  h.cc  h.hh  i.cc  i.hh  j.cc  j.hh  k.cc  k.hh  l.cc  l.hh  m.cc  m.hh  n.cc  n.hh  o.cc  o.hh  p.cc  p.hh  q.cc  q.hh  r.cc  r.hh  s.cc  s.hh  t.cc  t.hh  (+12 more)
ewoms/eclio/parser/rawdeck/: rawconsts.hh  rawenums.hh  rawkeyword.cc  rawkeyword.hh  rawrecord.cc  rawrecord.hh  startoken.cc  startoken.hh
ewoms/eclio/parser/units/: dimension.cc  dimension.hh  units.hh  unitsystem.cc  unitsystem.hh
ewoms/eclio/parser/utility/: functional.cc  functional.hh  string.hh  stringview.cc  stringview.hh  typetools.hh
ewoms/eclio/utility/: activegridcells.cc  activegridcells.hh  opminputerror.cc  opminputerror.hh  serializer.hh  timeservice.cc  timeservice.hh
ewoms/eclio/utility/numeric/: blas_lapack.h  builduniformmonotonetable.hh  calculatecellvol.cc  calculatecellvol.hh  cmp.hh  linearinterpolation.hh  monotcubicinterpolator.cc  monotcubicinterpolator.hh  nonuniformtablelinear.hh  rootfinders.hh  sparsevector.hh  uniformtablelinear.hh
ewoms/eclio/utility/parameters/: parameter.cc  parameter.hh  (+8 more)
genkw/: createdefaultkeywordlist.cc  keywordgenerator.cc  keywordgenerator.hh  keywordloader.cc  keywordloader.hh
tests/: 0A4_GRCTRL_LRAT_LRAT_GGR_BASE_MODEL2_MSW_ALL.DATA  2_WLIFT_MODEL5_NOINC.DATA  BASE_SIM.DATA  BASE_SIM_THPRES.DATA  EMBEDDED_PYTHON.DATA  EXIT_TEST.DATA  FIRST_SIM.DATA  MODEL2_RESTART.DATA  MSW.DATA  MSW_RESTART.DATA  RESTART_SIM.DATA  SPE1CASE1.DATA  SPE1CASE2.DATA  SPE1CASE2_RESTART.DATA  SPE9_CP_PACKED.DATA  SUMMARY_EFF_FAC.DATA  UDQ_ACTIONX_TEST1.DATA  UDQ_ACTIONX_TEST1_U.DATA  UDQ_BASE.DATA  UDQ_RESTART.DATA  UDQ_TEST_WCONPROD_IUAD-2.DATA  VFP_CASE.DATA  action_syntax_error.py  actionx.cc  addregtests.cc  aquancontests.cc  aqudimstests.cc  aquifercttests.cc  aquifertests.cc  aquifetptests.cc  boxtests.cc  columnschematests.cc  compsegunits.cc  connectiontests.cc  copyregtests.cc  decktests.cc  deckvaluetests.cc  dynamicstatetests.cc  dynamicvectortests.cc  eclipse3dpropertiestests.cc  (+130 more)
tests/data/integration_tests/: small.data  someobscureelements.data  truncated_records.data  udq.data  udq2.data
tests/integration/: boxtest.cc  checkdeckvalidity.cc  eclipsegridcreatefromdeck.cc  editnnctests.cc  includetest.cc  integrationtests.cc  ioconfigintegrationtest.cc  nnctests.cc  parse_write.cc  parsekeyword.cc  polymer.cc  schedulecreatefromdeck.cc  transmultintegrationtests.cc
tests/json/: jsontests.cc
tests/msim/: MSIM_PYACTION.DATA
utils/: compareecl.cc  convertecl.cc  deviation.hh  eclfilescomparator.cc  eclfilescomparator.hh  eclregressiontest.cc  eclregressiontest.hh  rewriteeclfile.cc  summary.cc  test_esmry_lod.cc
(+350 files in other folders)
